--- a/Catarina/index.html
+++ b/Catarina/index.html
@@ -44,17 +44,17 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01-02-02.jpg" class="image fit thumb"><img src="images/thumbs/0231-02.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
+								<h3>Chavena de Chá </h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02-01-01.jpg" class="image fit thumb"><img src="images/thumbs/02-02-03-01.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
+								<h3>Garrafa de Azeite</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03-03-02.jpg" alt="" /></a>
+								<h3>Galeria virtual</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
